room index and new page change

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center">
   <h1>ChatRoom</h1>
 
-  <%= link_to '入室', login_path, class: "btn btn-outline-success btn-lg" %>
+  <%= link_to '入室', users_path, method: :post, class: "btn btn-outline-success btn-lg" %>
 </div>
