--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,12 +1,155 @@
 @import "bootstrap";
 
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box-sizing;
+}
+
+html {
+  height: 100%;
+}
 body {
-  padding-top: 200px
+  // padding-top: 50px;
+  height: auto;
 }
 
 .center {
   text-align: center;
   h1 {
     margin-bottom: 50px;
+  }
+}
+
+// room index
+
+.select_chat_page {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: #E6FFE9;
+}
+
+.create_container {
+  width: 100%;
+  height: 30%;
+  padding-top: 50px;
+  .text_field {
+    width: 45%;
+    margin: 0 15px;
+    border-bottom: 2px solid #000;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-radius: 0px;
+    background-color: #E6FFE9;
+  }
+  .click {
+    height: 30px;
+    width: 70px;
+    padding: 1px 0;
+    font-size: 0.8rem;
+    border-radius: 1.0em;
+    background-color: #FFF;
+  }
+  .create_chatroom{
+    height: 30%;
+    margin-top: 30px;
+    a {
+      width: 60%;
+      height: 100%;
+      padding: 5px 0;
+      font-size: 1.3rem;
+      letter-spacing: 1px;
+      border-radius: 0.7em;
+      background-color: #FFF;
+    }
+    a:hover {
+      background-color: #6c757d;
+    }
+  }
+}
+
+.active_chatrooms {
+  padding-top: 30px;
+}
+.active_chatroom {
+  width: 100%;
+  height: 100%;
+  .room_list {
+    height: 35%;
+    margin-top: 30px;
+    a {
+      width: 60%;
+      height: 100%;
+      padding: 15px 0;
+      margin-bottom: 20px;
+      font-size: 1.3rem;
+      letter-spacing: 1px;
+      border-radius: 0.7em;
+      background-color: #FFF;
+      // text-align: justify;
+    }
+    a:hover {
+      background-color: #6c757d;
+    }
+  }
+}
+
+// room new
+.new_container {
+  width: 100%;
+  height: 600px;
+  text-align: center;
+  background-color: #E6FFE9;
+}
+
+.return_btn {
+  height: 25%;
+  width: 100%;
+  padding-top: 50px;
+  a {
+    float: left;
+    width: 100px;
+    margin: 10px 0 0 60px;
+    background-color: #FFF;
+  }
+}
+
+.new_room {
+  height: 75%;
+  width: 100%;
+  .new_room_text {
+    height: 100%;
+    width: 100%;
+    .text {
+      width: 60%;
+      height: 20%;
+      padding: 15px 0;
+      margin-bottom: 20px;
+      font-size: 1.3rem;
+      letter-spacing: 1px;
+      border-radius: 0.7em;
+      background-color: #FFF;
+    }
+    a:hover {
+      background-color: #6c757d;
+    }
+    .create_btn {
+      width: 100%;
+      padding-top: 100px;
+      input {
+        width: 20%;
+        border-radius: 0.7em;
+      }
+    }
   }
 }
