create action with tags success

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -20,7 +20,9 @@
           <% end %>
         </div>
       <% else %>
-        <p>「ChatRoomはございません」</p>
+        <div class="non_room_list">
+          <p>「ChatRoomはございません」</p>
+        </div>
       <% end %>
     </div>
   </div>
