--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="center">
+<div class="home_container center">
   <h1>ChatRoom</h1>
 
   <%= link_to '入室', users_path, method: :post, class: "btn btn-outline-success btn-lg" %>
