--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -22,6 +22,12 @@ body {
   height: auto;
 }
 
+.home_container {
+  width: 100%;
+  height: 400px;
+  background-color: #E6FFE9;
+  padding-top: 100px;
+}
 .center {
   text-align: center;
   h1 {
@@ -79,7 +85,7 @@ body {
 }
 
 .active_chatrooms {
-  padding-top: 30px;
+  padding-top: 100px;
 }
 .active_chatroom {
   width: 100%;
@@ -101,6 +107,10 @@ body {
     a:hover {
       background-color: #6c757d;
     }
+  }
+  .non_room_list {
+    height: 35%;
+    margin-top: 30px;
   }
 }
 
@@ -130,6 +140,7 @@ body {
   .new_room_text {
     height: 100%;
     width: 100%;
+    padding-top: 30px;
     .text {
       width: 60%;
       height: 20%;
@@ -145,11 +156,24 @@ body {
     }
     .create_btn {
       width: 100%;
-      padding-top: 100px;
+      padding-top: 50px;
       input {
         width: 20%;
         border-radius: 0.7em;
       }
+    }
+  }
+}
+
+#error_explanation {
+  width: 60%;
+  margin: 0 auto;
+  color: red;
+  ul {
+    color: red;
+    margin: 0 0 30px 0;
+    li {
+      text-align: left;
     }
   }
 }
