--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -12,7 +12,7 @@
         <%= f.fields_for :tags do |t| %>
           <%= t.text_field :name, class: "text", placeholder: 'ChatRoomタグ：' %>
         <% end %>
-
+        <p>*タグ名は必ずいれてください</p>
         <div class="create_btn">
           <%= f.submit '作成', class: "btn btn-outline-secondary" %>
         </div>
