--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -87,6 +87,31 @@ body {
 .active_chatrooms {
   padding-top: 100px;
 }
+
+.search {
+  width: 100%;
+  height: 30%;
+  padding-top: 30px;
+  .text_field {
+    width: 49%;
+    margin: 0 15px;
+    border-bottom: 2px solid #000;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-radius: 0px;
+    background-color: #E6FFE9;
+  }
+  .click {
+    height: 30px;
+    width: 70px;
+    padding: 1px 0;
+    font-size: 0.8rem;
+    border-radius: 1.0em;
+    background-color: #FFF;
+  }
+}
+
 .active_chatroom {
   width: 100%;
   height: 100%;
