--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -202,3 +202,66 @@ body {
     }
   }
 }
+
+.chatroom {
+  width: 100%;
+  height: auto;
+  background-color: #EEE;
+  .chat_header {
+    width: 100%;
+    height: 100px;
+    background-color: #E6FFE9;
+    .return_btn {
+      height: 100%;
+      width: 20%;
+      padding-top: 30px;
+      padding-bottom: 30px;
+      float: left;
+      a {
+        float: left;
+        width: 100px;
+        margin: 10px 0 0 60px;
+      }
+    }
+    .chatroom_name {
+      height: 100%;
+      width: 80%;
+      float: right;
+      padding-left: 25%;
+      padding-top: 30px;
+      padding-bottom: 30px;
+    }
+  }
+  .chat_container {
+    width: 70%;
+    height: 70%;
+    background-color: #FFF;
+    margin: 0 auto;
+    .chat_contents {
+      width: 100%;
+      height: 85%;
+      .chat {
+        word-break: keep-all;
+        width: 45%;
+        height: auto;
+        padding: 5px 8px 20px 8px;
+        .chat_comment {
+          background-color: #EEE;
+          border-radius: 0.8em;
+          height: 80px;
+          padding: 10px;
+        }
+      }
+    }
+    .contribute {
+      width: 100%;
+      height: 15%;
+      input {
+        width: 100%;
+        height: 70px;
+        border-radius: 0.8em;
+        border: 2px solid #000;
+      }
+    }
+  }
+}
